[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snakeshell"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "TatSu"
]
authors = [
    {name = "G000D1ESS"},
]
readme = "README.md"
license = {file = "LICENSE"}
description = "Unix Shell written in Python3"
classifiers = [
    "Topic :: System :: Shells",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
snake = "snakeshell.shell:run_shell"

[project.urls]
Homepage = "https://github.com/G000D1ESS/snakeshell.git"

